added skills content

--- a/index.html
+++ b/index.html
@@ -56,6 +56,41 @@
 
             </div>
         </section>
+        <section class="what-i-do">
+            <!-- what i do section -->
+            <h3 class="section-title">What I Do</h3>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanila Javascript</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam vero quas doloribus quidem error magnam.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Nulla ex earum animi incidunt sit quia distinctio recusandae libero placeat cumque, voluptates, sequi consequuntur.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoBd</p>
+                    <p class="skill-description">Quaerat modi sapiente eligendi, delectus cum dolores alias dolor praesentium atque odio, reiciendis vel iusto.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node Js</p>
+                    <p class="skill-description">Odit illum ducimus aut, ratione, velit voluptatibus vero nam nisi doloremque repellendus doloribus nesciunt explicabo.</p>
+                </div>
+            </div>
+        </section>
+        <!-- resume section -->
+        <section>
+            <h3 class="section-title">A summery of my resume</h3>
+            <div class="resume-content">
+                <div>
+
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
